added index changes

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <h6 class="section-caption">delighting users, one product at a time.</h6>
       <!-- Teammatic -->
       <div>
-        <div class="project-border" id="grad-prim" style="padding: 24px 24px 0px 24px">
+        <div class="work-border" id="grad-prim" style="padding: 24px 24px 0px 24px">
           <a href="teammatic.html">
             <h1 style="font-size: 8rem">teammatic</h1>
           </a>
@@ -79,7 +79,7 @@
       </div>
       <!-- Fitted -->
       <div class="project-div">
-        <div class="project-border" id="grad-prim" style="padding: 24px 24px 0px 24px">
+        <div class="work-border" id="grad-prim" style="padding: 24px 24px 0px 24px">
           <a href="fitted.html">
             <h1 style="font-size: 8rem;">fitted</h1>
           </a>
@@ -88,7 +88,7 @@
       </div>
       <!-- Thinkabit Lab -->
       <div class="project-div">
-        <div class="project-border" id="grad-prim" style="padding: 24px 24px 0px 24px">
+        <div class="work-border" id="grad-prim" style="padding: 24px 24px 0px 24px">
           <a href="thinkabit.html">
             <h1 style="font-size: 8rem;">thinkabit lab</h1>
           </a>
@@ -97,7 +97,7 @@
       </div>
       <!-- Timekeeper -->
       <div class="project-div">
-        <div class="project-border" id="grad-prim" style="padding: 24px 24px 0px 24px">
+        <div class="work-border" id="grad-prim" style="padding: 24px 24px 0px 24px">
           <a href="timekeeper.html">
             <h1 style="font-size: 8rem;">timekeeper</h1>
           </a>
@@ -111,6 +111,43 @@
     <div class="section-div" id="projects">
       <h5 style="line-height: 0px;"><strong>PROJECTS</strong></h5>
       <h6 class="section-caption">for those pesky nights &amp; weekends</h6>
+      <!-- slackrr -->
+      <div>
+        <div class="project-border" id="grad-second" style="padding: 24px 24px 0px 24px">
+          <a href="https://itunes.apple.com/us/podcast/up-coming/id1263597415?mt=2" target="_blank">
+            <h1 style="font-size: 8rem; color: #74E3B5">up+coming</h1>
+          </a>
+          <p>podcast series discussing design topics from a jr. level perspective</p>
+        </div>
+      </div>
+      <!-- trackfit -->
+      <div class="project-div">
+        <div class="project-border-wip" id="grad-wip" style="padding: 24px 24px 0px 24px">
+          <a href="fitted.html">
+            <h1 style="font-size: 8rem; color: #4A4A4A; opacity: 0.5">slackrr</h1>
+          </a>
+          <p id="project-wip"><strong>COMING SOON</strong> - implementing read receipts in Slack</p>
+        </div>
+      </div>
+      <!-- trackfit -->
+      <div class="project-div">
+        <div class="project-border-wip" id="grad-wip" style="padding: 24px 24px 0px 24px">
+          <a href="fitted.html">
+            <h1 style="font-size: 8rem; color: #4A4A4A; opacity: 0.5">trackfit</h1>
+          </a>
+          <p id="project-wip"><strong>COMING SOON</strong> - tired of confusing fitness apps so I'm attempting to ship my own</p>
+        </div>
+      </div>
+      <!-- focus.in -->
+      <div class="project-div">
+        <div class="project-border-wip" id="grad-wip" style="padding: 24px 24px 0px 24px">
+          <a href="thinkabit.html">
+            <h1 style="font-size: 8rem; color: #4A4A4A; opacity: 0.5">focus.in</h1>
+          </a>
+          <p id="project-wip"><strong>COMING SOON</strong> - productivity app meant to segment your time better &amp; more efficiently</p>
+        </div>
+      </div>
+    </div>
       <!-- SlackRR -->
       <!-- <div class="project-div" style="padding-top: 24px">
         <a href="#">
@@ -118,10 +155,11 @@
         </a>
         <p>implementing read receipts in Slack</p>
       </div> -->
-      <div style="padding-top: 24px">
+
+      <!-- <div style="padding-top: 24px">
         <h1 style="font-size: 8rem; opacity: 0.5;">slackrr</h1>
         <p id="project-wip"><strong>COMING SOON</strong> - implementing read receipts in Slack</p>
-      </div>
+      </div> -->
       <!-- Trackfit -->
       <!-- <div class="project-div">
         <a href="#">
@@ -129,16 +167,15 @@
         </a>
         <p>tired of confusing fitness apps so I'm attempting to ship my own</p>
       </div> -->
-      <div class="project-div">
+      <!-- <div class="project-div">
         <h1 style="font-size: 8rem; opacity: 0.5;">trackfit</h1>
         <p id="project-wip"><strong>COMING SOON</strong> - tired of confusing fitness apps so I'm attempting to ship my own</p>
-      </div>
+      </div> -->
       <!-- Focus.In -->
-      <div class="project-div">
+      <!-- <div class="project-div">
         <h1 style="font-size: 8rem; opacity: 0.5;">focus.in</h1>
         <p id="project-wip"><strong>COMING SOON</strong> - productivity app meant to segment your time better &amp; more efficiently</p>
-      </div>
-    </div>
+      </div> -->
 
     <!-- Contact Section -->
     <a id="contact"></a>
