--- a/index.html
+++ b/index.html
@@ -68,11 +68,20 @@
     <div class="section-div">
       <h5 style="line-height: 0px;"><strong>WORK</strong></h5>
       <h6 class="section-caption">delighting users, one product at a time.</h6>
-      <!-- Teammatic -->
+      <!-- Oppia -->
       <div>
         <div class="work-border" id="grad-prim" style="padding: 24px 24px 0px 24px">
+          <a href="https://www.oppia.org/splash" target="_blank">
+            <h1 style="font-size: 8rem">oppia</h1>
+          </a>
+          <p>open source online learning platform for all // USER RESEARCH</p>
+        </div>
+      </div>
+      <!-- Teammatic -->
+      <div class="project-div">
+        <div class="work-border" id="grad-prim" style="padding: 24px 24px 0px 24px">
           <a href="teammatic.html">
-            <h1 style="font-size: 8rem">teammatic</h1>
+            <h1 style="font-size: 8rem;">teammatic</h1>
           </a>
           <p>team-creation tool for instructors in class // INTERACTION DESIGN + PROUDCT</p>
         </div>
