--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>The Portfolio of Alex Tran</title>
+  <title>Alex Tran</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
@@ -15,7 +15,8 @@
 
   <!-- FONT
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link href="https://fonts.googleapis.com/css?family=Overpass+Mono:300,400,600,700" rel="stylesheet">
+  <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="stylesheet" href="css/normalize.css">
@@ -25,198 +26,22 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="icon" type="image/png" href="images/favicon.png">
 
-  <style>
-    body  {
-      background-image: url("images/pattern.png");
-      background-color: #cccccc;
-    }
-  </style>
-
 </head>
 <body>
 
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <div class="container">
-    <!-- Header Section -->
-    <div class="header-div" style="padding-top: 24px; padding-bottom: 24px">
-      <div class="u-pull-left">
-        <a href="#" style="color: #4A4A4A;"><h6 class="headertext">ALEX TRAN</h6></a>
-      </div>
-      <div class="u-pull-right">
-        <a href="#work"
-          <h6 class="headertext" style="display: inline-block; padding-right: 32px">WORK</h6>
-        </a>
-        <a href="#projects"
-          <h6 class="headertext" style="display: inline-block; padding-right: 32px">PROJECTS</h6>
-        </a>
-        <a href="#contact"
-          <h6 class="headertext" style="display: inline-block;">CONTACT</h6>
-        </a>
+  <div class="u-full-width" style="padding-left: 4%">
+    <div class="row">
+      <div class="ten columns" style="margin-top: 4%">
+        <h2><strong>Alex Tran</strong></h2>
+        <p>Hey, hi, how's it going?</p>
+        <p>I'm a design-centered human based in San Jose, CA.</p>
+        <p>Catch me on <a href="http://twitter.com/wolfinthecity_" target="_blank">Twitter</a> sharing jokes, Overwatch and anything design-related.<br>I write weekly recaps and articles on interesting tidbits in the design world on <a href="http://medium.com/@alextrantheeman" target="_blank">Medium</a>.</p>
+        <p><span style="background-color: pink">I'm looking for work! If your team is looking for a designer, please <a href="mailto:awtran16@gmail.com.com?Subject=Let's%20chat!" target="_top">get in touch</span>.</p>
+        <p>Like what you see so far? Check out my full portfolio <a href="http://awtran.com" target="_blank">here</a>.</p>
       </div>
     </div>
-
-    <!-- Intro Section -->
-    <div class="section-div">
-      <h3 style="padding-bottom: 24px;">Welcome&#126;</h3>
-      <h3 style="padding-bottom: 24px;">I’m <span style="font-weight: 800; color: #5E1AFF">Alex</span>, a design-centered human looking to improve people’s lives through the technology they use. I work to promote design thinking and solutions.</h3>
-      <h3>Constantly thirsty for knowledge &amp; coffee.</h3>
-    </div>
-
-    <!-- Work Section -->
-    <a id="work"></a>
-    <div class="section-div">
-      <h5 style="line-height: 0px;"><strong>WORK</strong></h5>
-      <h6 class="section-caption">delighting users, one product at a time.</h6>
-      <!-- Oppia -->
-      <div>
-        <div class="work-border" id="grad-prim" style="padding: 24px 24px 0px 24px">
-          <a href="https://www.oppia.org/splash" target="_blank">
-            <h1 style="font-size: 8rem">oppia</h1>
-          </a>
-          <p>open source online learning platform for all // USER RESEARCH</p>
-        </div>
-      </div>
-      <!-- Teammatic -->
-      <div class="project-div">
-        <div class="work-border" id="grad-prim" style="padding: 24px 24px 0px 24px">
-          <a href="teammatic.html">
-            <h1 style="font-size: 8rem;">teammatic</h1>
-          </a>
-          <p>team-creation tool for instructors in class // INTERACTION DESIGN + PROUDCT</p>
-        </div>
-      </div>
-      <!-- Fitted -->
-      <div class="project-div">
-        <div class="work-border" id="grad-prim" style="padding: 24px 24px 0px 24px">
-          <a href="fitted.html">
-            <h1 style="font-size: 8rem;">fitted</h1>
-          </a>
-          <p>mobile app to find the right-sized clothing // INTERACTION DESIGN + PRODUCT</p>
-        </div>
-      </div>
-      <!-- Thinkabit Lab -->
-      <div class="project-div">
-        <div class="work-border" id="grad-prim" style="padding: 24px 24px 0px 24px">
-          <a href="thinkabit.html">
-            <h1 style="font-size: 8rem;">thinkabit lab</h1>
-          </a>
-          <p>applying human-centered design to Qualcomm's Thinkabit Lab // USER RESEARCH</p>
-        </div>
-      </div>
-      <!-- Timekeeper -->
-      <div class="project-div">
-        <div class="work-border" id="grad-prim" style="padding: 24px 24px 0px 24px">
-          <a href="timekeeper.html">
-            <h1 style="font-size: 8rem;">timekeeper</h1>
-          </a>
-          <p>scheduling app that optimizes daily tasks // UX &amp; UI DESIGN</p>
-        </div>
-      </div>
-    </div>
-
-    <!-- Projects Section -->
-    <a id="projects"></a>
-    <div class="section-div" id="projects">
-      <h5 style="line-height: 0px;"><strong>PROJECTS</strong></h5>
-      <h6 class="section-caption">for those pesky nights &amp; weekends</h6>
-      <!-- slackrr -->
-      <div>
-        <div class="project-border" id="grad-second" style="padding: 24px 24px 0px 24px">
-          <a href="https://itunes.apple.com/us/podcast/up-coming/id1263597415?mt=2" target="_blank">
-            <h1 style="font-size: 8rem; color: #74E3B5">up+coming</h1>
-          </a>
-          <p>podcast series discussing design topics from a jr. level perspective</p>
-        </div>
-      </div>
-      <!-- trackfit -->
-      <div class="project-div">
-        <div class="project-border-wip" id="grad-wip" style="padding: 24px 24px 0px 24px">
-          <a href="fitted.html">
-            <h1 style="font-size: 8rem; color: #4A4A4A; opacity: 0.5">slackrr</h1>
-          </a>
-          <p id="project-wip"><strong>COMING SOON</strong> - implementing read receipts in Slack</p>
-        </div>
-      </div>
-      <!-- trackfit -->
-      <div class="project-div">
-        <div class="project-border-wip" id="grad-wip" style="padding: 24px 24px 0px 24px">
-          <a href="fitted.html">
-            <h1 style="font-size: 8rem; color: #4A4A4A; opacity: 0.5">trackfit</h1>
-          </a>
-          <p id="project-wip"><strong>COMING SOON</strong> - tired of confusing fitness apps so I'm attempting to ship my own</p>
-        </div>
-      </div>
-      <!-- focus.in -->
-      <div class="project-div">
-        <div class="project-border-wip" id="grad-wip" style="padding: 24px 24px 0px 24px">
-          <a href="thinkabit.html">
-            <h1 style="font-size: 8rem; color: #4A4A4A; opacity: 0.5">focus.in</h1>
-          </a>
-          <p id="project-wip"><strong>COMING SOON</strong> - productivity app meant to segment your time better &amp; more efficiently</p>
-        </div>
-      </div>
-    </div>
-      <!-- SlackRR -->
-      <!-- <div class="project-div" style="padding-top: 24px">
-        <a href="#">
-          <h1 id="project-title" style="color: #74E3B5;">SlackRR</h1>
-        </a>
-        <p>implementing read receipts in Slack</p>
-      </div> -->
-
-      <!-- <div style="padding-top: 24px">
-        <h1 style="font-size: 8rem; opacity: 0.5;">slackrr</h1>
-        <p id="project-wip"><strong>COMING SOON</strong> - implementing read receipts in Slack</p>
-      </div> -->
-      <!-- Trackfit -->
-      <!-- <div class="project-div">
-        <a href="#">
-          <h1 id="project-title" style="color: #74E3B5;">Trackfit</h1>
-        </a>
-        <p>tired of confusing fitness apps so I'm attempting to ship my own</p>
-      </div> -->
-      <!-- <div class="project-div">
-        <h1 style="font-size: 8rem; opacity: 0.5;">trackfit</h1>
-        <p id="project-wip"><strong>COMING SOON</strong> - tired of confusing fitness apps so I'm attempting to ship my own</p>
-      </div> -->
-      <!-- Focus.In -->
-      <!-- <div class="project-div">
-        <h1 style="font-size: 8rem; opacity: 0.5;">focus.in</h1>
-        <p id="project-wip"><strong>COMING SOON</strong> - productivity app meant to segment your time better &amp; more efficiently</p>
-      </div> -->
-
-    <!-- Contact Section -->
-    <a id="contact"></a>
-    <div class="section-div" id="projects">
-      <h5 style="line-height: 0px;"><strong>CONTACT</strong></h5>
-      <h6 class="section-caption">call me, beep me if you wanna reach me</h6>
-      <div style="padding-top: 0px">
-        <h3 style="padding-bottom: 24px; font-size: 3.5rem">
-          <a href="mailto:awtran16@gmail.com?Subject=Hello!" target="_top" class="contact-a">
-            Email
-          </a>
-          &middot;
-          <a href="http://twitter.com/wolfinthecity_" target="_blank" class="contact-a">
-            Twitter
-          </a>
-          &middot;
-          <a href="http://medium.com/@alextrantheeman" target="_blank" class="contact-a">
-            Medium
-          </a>
-          &middot;
-          <a href="https://dribbble.com/awtran" target="_blank" class="contact-a">
-            Dribbble
-          </a>
-          &middot;
-          <a href="http://linkedin.com/in/alex-tran-441540a0/" target="_blank" class="contact-a">
-            Linkedin
-          </a>
-        </h3>
-      </div>
-    </div>
-
-  <!-- end of the line -->
   </div>
 
 <!-- End Document
