Underline CSS added

--- a/index.html
+++ b/index.html
@@ -21,10 +21,12 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/skeleton.css">
+  <link rel="stylesheet" href="css/style.css">
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="icon" type="image/png" href="images/favicon.png">
+
 
 </head>
 <body>
@@ -35,11 +37,13 @@
     <div class="row">
       <div class="ten columns" style="margin-top: 4%">
         <h2><strong>Alex Tran</strong></h2>
-        <p>Hey, hi, how's it going?</p>
-        <p>I'm a design-centered human based in San Jose, CA.</p>
-        <p>Catch me on <a href="http://twitter.com/wolfinthecity_" target="_blank">Twitter</a> sharing jokes, Overwatch and anything design-related.<br>I write weekly recaps and articles on interesting tidbits in the design world on <a href="http://medium.com/@alextrantheeman" target="_blank">Medium</a>.</p>
-        <p><span style="background-color: pink">I'm looking for work! If your team is looking for a designer, please <a href="mailto:awtran16@gmail.com.com?Subject=Let's%20chat!" target="_top">get in touch</span>.</p>
-        <p>Like what you see so far? Check out my full portfolio <a href="http://awtran.com" target="_blank">here</a>.</p>
+        <p>Hey, hi, how's it going? &#x1F64C</p>
+        <p>I'm a design-centered human based in San Jose, CA. &#x1F4CD</p>
+        <p>Catch me on <a class="underline" href="http://twitter.com/wolfinthecity_" target="_blank">Twitter</a> sharing jokes, Overwatch and anything design-related.<br>I write weekly recaps and articles on interesting tidbits in the design world on <a class="underline" href="http://medium.com/@alextrantheeman" target="_blank">Medium</a>.</p>
+        <p><span style="background-color: yellow">I'm looking for work! If your team is looking for a designer, please <a class="underline"href="mailto:awtran16@gmail.com.com?Subject=Let's%20chat!" target="_top">get in touch</a></span>.</p>
+
+        <!-- Link to actual portfolio -->
+        <p>Like what you see so far? Check out my full portfolio <a class="underline" href="http://awtran.com" target="_blank">here</a>.</p>
       </div>
     </div>
   </div>
