Margin top for mobile

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="u-full-width" style="padding-left: 4%">
     <div class="row">
-      <div class="ten columns" style="margin-top: 4%">
+      <div class="ten columns header">
         <h2><strong>Alex Tran</strong></h2>
         <p>Hey, hi, how's it going? &#x1F64C</p>
         <p>I'm a design-centered human based in San Jose, CA. &#x1F4CD</p>
