Skin color emoji

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="row">
       <div class="ten columns header">
         <h2><strong>Alex Tran</strong></h2>
-        <p>Hey, hi, how's it going? &#x1F64C</p>
+        <p>Hey, hi, how's it going? &#x1F64C&#x1F3FB;</p>
         <p>I'm a design-centered human based in San Jose, CA. &#x1F4CD</p>
         <p>Catch me on <a class="underline" href="http://twitter.com/wolfinthecity_" target="_blank">Twitter</a> sharing jokes, Overwatch and anything design-related.<br>I write weekly recaps and articles on interesting tidbits in the design world on <a class="underline" href="http://medium.com/@alextrantheeman" target="_blank">Medium</a>.</p>
         <p><span style="background-color: yellow">I'm looking for work! If your team is looking for a designer, please <a class="underline"href="mailto:awtran16@gmail.com.com?Subject=Let's%20chat!" target="_top">get in touch</a></span>.</p>
