Added more content

--- a/index.html
+++ b/index.html
@@ -33,13 +33,33 @@
 
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <div class="u-full-width" style="padding-left: 4%">
+  <div class="container">
     <div class="row">
-      <div class="ten columns header">
+      <div class="header">
         <h2><strong>Alex Tran</strong></h2>
-        <p>Hey, hi, how's it going? &#x1F64C&#x1F3FB;</p>
+
+        <!-- Introduction -->
+        <p>Hey, hi, how's it going? &#x1F647&#x1F3FB; I'm a design-centered human based in San Jose, CA. &#x1F4CD.</p>
         <p>I'm a design-centered human based in San Jose, CA. &#x1F4CD</p>
-        <p>Catch me on <a class="underline" href="http://twitter.com/wolfinthecity_" target="_blank">Twitter</a> sharing jokes, Overwatch and anything design-related.<br>I write weekly recaps and articles on interesting tidbits in the design world on <a class="underline" href="http://medium.com/@alextrantheeman" target="_blank">Medium</a>.</p>
+
+        <!-- Current work -->
+        <p>Currently working at <a class="underline" href="http://www.cisco.com/" target="_blank">Cisco</a> as a full-time engineer, spare-time designer.
+        <br>
+        Conducting usability tests for <a class="underline" href="http://oppia.org/" target="_blank">Oppia</a> as one of their UX researchers.
+        <br>
+        Also co-found &amp; co-hosting <a class="underline" href="https://itunes.apple.com/us/podcast/up-coming/id1263597415" target="_blank">Up+Coming</a>, a podcast on design from a junior-level perspective.
+        </p>
+        
+        <!-- Social Media -->
+        <p>Catch me on <a class="underline twitter"href="http://twitter.com/wolfinthecity_" target="_blank">Twitter</a> sharing jokes, Overwatch and design news.
+        <br>
+        I write weekly recaps and articles on interesting tidbits in the design world on <a class="underline medium" href="http://medium.com/@alextrantheeman" target="_blank">Medium</a>.
+        <br>
+        Oh, and I occasionally share some of the things I'm doing on <a class="underline dribbble" href="https://dribbble.com/awtran" target="_blank">Dribbble</a>.
+        </p>
+        
+
+        <!-- CTA: looking for work -->
         <p><span style="background-color: yellow">I'm looking for work! If your team is looking for a designer, please <a class="underline"href="mailto:awtran16@gmail.com.com?Subject=Let's%20chat!" target="_top">get in touch</a></span>.</p>
 
         <!-- Link to actual portfolio -->
