--- a/second.html
+++ b/second.html
@@ -38,23 +38,23 @@
       <div class="header">
         <h2><strong>Alex Tran</strong></h2>
 
-        <p>Hey, hi, how's it going? &#x1F647;&#x1F3FB;</p> 
-
-        <p>I'm a design-centered human based in San Jose, CA. I work to benefit people's lives through seamless experiences with the products &amp; services they use. I'm passionate about design and am always looking to learn &amp; help others in the process.</p>
-
+        <!-- Introduction -->
+        <p>Hey, hi, how's it going? &#x1F647;&#x1F3FB; I'm a design-centered human based in San Jose, CA &#x1F4CD;. I work to benefit people's lives through seamless experiences with the products &amp; services they use. I'm passionate about design and am always looking to learn &amp; help others in the process &#x1F44C;&#x1F3FB;.</p>
+        
         <!-- Emoji Iteration -->
-        <p>Currently, I am working at <a class="underline" href="http://www.cisco.com/" target="_blank">Cisco</a> as a full-time engineer, spare-time designer. I also conduct usability tests for <a class="underline" href="http://oppia.org/" target="_blank">Oppia</a> as one of their UX researchers. On weekends, you can find me co-hosting <a class="underline" href="https://itunes.apple.com/us/podcast/up-coming/id1263597415" target="_blank">Up+Coming</a>, a podcast on design from a junior-level perspective.
+        <p>Currently, I am working at <a class="underline" href="http://www.cisco.com/" target="_blank">Cisco</a> as a full-time engineer &#x1F4BB;, spare-time designer &#x1F4A1;. I also conduct usability tests &#x1F4DD; for <a class="underline" href="http://oppia.org/" target="_blank">Oppia</a> as one of their UX researchers. On weekends, you can find me co-hosting &#x1F3A7; <a class="underline" href="https://itunes.apple.com/us/podcast/up-coming/id1263597415" target="_blank">Up+Coming</a>, a podcast on design from a junior-level perspective.
         </p>
 
-        <p><span style="background-color: #FFD193">I'm looking for work! If your team is looking for a designer, please <a style="color: #222; text-decoration: underline" href="mailto:awtran16@gmail.com.com?Subject=Let's%20chat!" target="_top">get in touch</a>.</span></p>
+        <p><span style="background-color: #FFD193">I'm looking for work! If your team is looking for a designer, please <a style="color: #222; text-decoration: underline" href="mailto:awtran16@gmail.com.com?Subject=Let's%20chat!" target="_top">get in touch &#x1F4E7;</a>.</span></p>
         
-        <p>Catch me on <a class="underline twitter"href="http://twitter.com/wolfinthecity_" target="_blank">Twitter</a> sharing jokes, Overwatch and design news. I write weekly recaps and articles on interesting tidbits in the design world on <a class="underline medium" href="http://medium.com/@alextrantheeman" target="_blank">Medium</a>. Oh, and I occasionally share some of the things I'm doing on <a class="underline dribbble" href="https://dribbble.com/awtran" target="_blank">Dribbble</a>.
+        <p>Catch me on <a class="underline twitter"href="http://twitter.com/wolfinthecity_" target="_blank">Twitter</a> &#x1F425; sharing jokes, Overwatch and design news. I write &#x1F4D3; weekly recaps and articles on interesting tidbits in the design world on <a class="underline medium" href="http://medium.com/@alextrantheeman" target="_blank">Medium</a>. Oh, and I occasionally share some of the things I'm doing on <a class="underline dribbble" href="https://dribbble.com/awtran" target="_blank">Dribbble</a> &#x1F3C0;.
         </p>
 
         <!-- Link to actual portfolio -->
         <p>Like what you see so far? Check out my full portfolio <a class="underline" href="http://awtran.com" target="_blank">here</a>.</p>
 
-        <a href="second.html">Iteration #2 here</a>
+        <a href="index.html">Iteration #1 here</a><br>
+        <a href="third.html">Iteration #3 here</a>
       </div>
     </div>
   </div>
