--- a/third.html
+++ b/third.html
@@ -40,21 +40,23 @@
 
         <p>Hey, hi, how's it going? &#x1F647;&#x1F3FB;</p> 
 
-        <p>I'm a design-centered human based in San Jose, CA. I work to benefit people's lives through seamless experiences with the products &amp; services they use. I'm passionate about design and am always looking to learn &amp; help others in the process.</p>
+        <p>I'm a design-centered human based in San Jose, CA. Currently, I'm working at <a class="underline" href="http://www.cisco.com/" target="_blank">Cisco</a> as a full-time engineer, spare-time designer. On weeknights and weekends, I conduct usability tests for <a class="underline" href="http://oppia.org/" target="_blank">Oppia</a> as one of their UX researchers &amp; I co-host <a class="underline" href="https://itunes.apple.com/us/podcast/up-coming/id1263597415" target="_blank">Up+Coming</a>, a podcast on design from a junior-level perspective.</p> 
 
-        <!-- Emoji Iteration -->
-        <p>Currently, I am working at <a class="underline" href="http://www.cisco.com/" target="_blank">Cisco</a> as a full-time engineer, spare-time designer. I also conduct usability tests for <a class="underline" href="http://oppia.org/" target="_blank">Oppia</a> as one of their UX researchers. On weekends, you can find me co-hosting <a class="underline" href="https://itunes.apple.com/us/podcast/up-coming/id1263597415" target="_blank">Up+Coming</a>, a podcast on design from a junior-level perspective.
-        </p>
-
-        <p><span style="background-color: #FFD193">I'm looking for work! If your team is looking for a designer, please <a style="color: #222; text-decoration: underline" href="mailto:awtran16@gmail.com.com?Subject=Let's%20chat!" target="_top">get in touch</a>.</span></p>
+        <!-- Current work -->
+        <!-- <p>Currently working at <a class="underline" href="http://www.cisco.com/" target="_blank">Cisco</a> as a full-time engineer, spare-time designer.
+        <br>
+        Conducting usability tests for <a class="underline" href="http://oppia.org/" target="_blank">Oppia</a> as one of their UX researchers.
+        <br>
+        Also co-found &amp; co-hosting <a class="underline" href="https://itunes.apple.com/us/podcast/up-coming/id1263597415" target="_blank">Up+Coming</a>, a podcast on design from a junior-level perspective.
+        </p> -->
         
-        <p>Catch me on <a class="underline twitter"href="http://twitter.com/wolfinthecity_" target="_blank">Twitter</a> sharing jokes, Overwatch and design news. I write weekly recaps and articles on interesting tidbits in the design world on <a class="underline medium" href="http://medium.com/@alextrantheeman" target="_blank">Medium</a>. Oh, and I occasionally share some of the things I'm doing on <a class="underline dribbble" href="https://dribbble.com/awtran" target="_blank">Dribbble</a>.
-        </p>
+        <p><span style="background-color: #FFD193">I'm looking for work! If your team is looking for a designer, please <a style="color: #222; text-decoration: underline" href="mailto:awtran16@gmail.com.com?Subject=Let's%20chat!" target="_top">get in touch</a>.</span></p>
 
-        <!-- Link to actual portfolio -->
-        <p>Like what you see so far? Check out my full portfolio <a class="underline" href="http://awtran.com" target="_blank">here</a>.</p>
+        <!-- Social Media -->
+        <p>Catch me on <a class="underline twitter"href="http://twitter.com/wolfinthecity_" target="_blank">Twitter</a> sharing jokes, Overwatch and design news. I write weekly recaps and articles on interesting tidbits in the design world on <a class="underline medium" href="http://medium.com/@alextrantheeman" target="_blank">Medium</a>.</p>
 
-        <a href="second.html">Iteration #2 here</a>
+        <a href="second.html">Iteration #2 here</a><br>
+        <a href="index.html">Iteration #1 here</a>
       </div>
     </div>
   </div>
