--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <p>Currently, I am working at <a class="underline" href="http://www.cisco.com/" target="_blank">Cisco</a> as a full-time engineer, spare-time designer. I also conduct usability tests for <a class="underline" href="http://oppia.org/" target="_blank">Oppia</a> as one of their UX researchers. On weekends, you can find me co-hosting <a class="underline" href="https://itunes.apple.com/us/podcast/up-coming/id1263597415" target="_blank">Up+Coming</a>, a podcast on design from a junior-level perspective.
         </p>
 
-        <p><span style="background-color: #FFD193">I'm looking for work! If your team is looking for a designer, please <a style="color: #222; text-decoration: underline" href="mailto:awtran16@gmail.com.com?Subject=Let's%20chat!" target="_top">get in touch</a>.</span></p>
+        <p><span style="background-color: #FFD193">I'm looking for work! If your team is looking for a designer, please <a style="color: #222; text-decoration: underline" href="mailto:awtran16@gmail.com.com?Subject=Let's%20chat!" target="_top">get in touch &#x1F4E7; </a>.</span></p>
         
         <p>Catch me on <a class="underline twitter"href="http://twitter.com/wolfinthecity_" target="_blank">Twitter</a> sharing jokes, Overwatch and design news. I write weekly recaps and articles on interesting tidbits in the design world on <a class="underline medium" href="http://medium.com/@alextrantheeman" target="_blank">Medium</a>. Oh, and I occasionally share some of the things I'm doing on <a class="underline dribbble" href="https://dribbble.com/awtran" target="_blank">Dribbble</a>.
         </p>
@@ -55,6 +55,7 @@
         <p>Like what you see so far? Check out my full portfolio <a class="underline" href="http://awtran.com" target="_blank">here</a>.</p>
 
         <a href="second.html">Iteration #2 here</a>
+        <a href="third.html">Iteration #3 here</a>
         <br>
         <br>
       </div>
