--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
         </p>
 
         <!-- Link to actual portfolio -->
-        <p>Like what you see so far? Check out my full portfolio <a class="underline" href="http://awtran.com" target="_blank">here</a>.</p>
+        <!-- <p>Like what you see so far? Check out my full portfolio <a class="underline" href="http://awtran.com" target="_blank">here</a>.</p> -->
 
-        <a href="second.html">Iteration #2 here</a>
+        <a href="second.html">Iteration #2 here</a><br>
         <a href="third.html">Iteration #3 here</a>
         <br>
         <br>
