added coding assessment

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div class="header">
         <h2><strong>Alex Tran</strong></h2>
 
-        <p>Hey, hi, how's it going? &#x1F647;&#x1F3FB;</p> 
+        <p>Hey, hi, how's it going? &#x1F647;&#x1F3FB;</p>
 
         <p>I'm a design-centered human based in San Jose, CA. I work to benefit people's lives through seamless experiences with the products &amp; services they use. I'm passionate about design and am always looking to learn &amp; help others in the process.</p>
 
@@ -47,15 +47,14 @@
         </p>
 
         <p><span style="background-color: #FFD193">I'm looking for work! If your team is looking for a designer, please <a style="color: #222; text-decoration: underline" href="mailto:awtran16@gmail.com.com?Subject=Let's%20chat!" target="_top">get in touch &#x1F4E7; </a>.</span></p>
-        
+
         <p>Catch me on <a class="underline twitter"href="http://twitter.com/wolfinthecity_" target="_blank">Twitter</a> sharing jokes, Overwatch and design news. I write weekly recaps and articles on interesting tidbits in the design world on <a class="underline medium" href="http://medium.com/@alextrantheeman" target="_blank">Medium</a>. Oh, and I occasionally share some of the things I'm doing on <a class="underline dribbble" href="https://dribbble.com/awtran" target="_blank">Dribbble</a>.
         </p>
 
         <!-- Link to actual portfolio -->
         <!-- <p>Like what you see so far? Check out my full portfolio <a class="underline" href="http://awtran.com" target="_blank">here</a>.</p> -->
 
-        <a href="second.html">Iteration #2 here</a><br>
-        <a href="third.html">Iteration #3 here</a>
+        <a href="virta.html">Coding Assessment here</a>
         <br>
         <br>
       </div>
