changed src names

--- a/virta.html
+++ b/virta.html
@@ -30,7 +30,7 @@
       <div class="overlay-div">
         <!-- Link to homepage -->
         <a href="http://virtahealth.com" target="_blank">
-          <img class="virta-img" src="img/virtaLogo.svg" alt="Virta Logo">
+          <img class="virta-img" src="images/virtaLogo.svg" alt="Virta Logo">
         </a>
 
         <!-- Landing Text -->
