--- a/index.html
+++ b/index.html
@@ -1,67 +1,162 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html lang="en" class="sans-serif bg-lightest-blue">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+    <title>
 
-  <!-- Basic Page Needs
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <meta charset="utf-8">
-  <title>Alex Tran</title>
-  <meta name="description" content="">
-  <meta name="author" content="">
+    </title>
+    <meta name="author" content="">
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="/css/tachyons.css">
+    <link rel="stylesheet" href="https://unpkg.com/tachyons@4.8.1/css/tachyons.min.css"/>
+  </head>
+  <body>
+    <article class="cf ph3 ph5-ns pv2 bg-lightest-blue">
+      <nav class="dt w-100 border-box pv3 ph1-ns bb purple bw mb4 mb5-l">
+        <a class="dtc v-mid purple link dim w-25" href="#" title="Home">
+          <span class="f3 fw9 code">AT</span>
+        </a>
+        <div class="dtc v-mid w-75 tr ttu code">
+          <!-- <a class="link dim purple f6 f5-ns dib mr2 mr4-ns" href="#" title="About">Projects</a>
+          <a class="link dim purple f6 f5-ns dib mr2" href="#" title="Store">Contact</a> -->
+          <a class="link dim f6 f5-ns dib mr3 mr3-ns" href="#">
+            <img src="https://icon.now.sh/email/22/5E2CA5" alt="email">
+          </a>
+          <a class="link dim f6 f5-ns dib mr3 mr3-ns" href="#">
+            <img src="https://icon.now.sh/twitter/22/5E2CA5" alt="twitter">
+          </a>
+          <a class="link dim f6 f5-ns dib mr3 mr3-ns" href="#">
+            <img src="https://icon.now.sh/medium/22/5E2CA5" alt="medium">
+          </a>
+          <a class="link dim f6 f5-ns dib" href="#">
+            <img src="https://icon.now.sh/dribbble/22/5E2CA5" alt="dribbble">
+          </a>
+        </div>
+      </nav>
 
-  <!-- Mobile Specific Metas
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+      <header class="fn fl-ns w-30-ns mb3 mb6-ns pv5 pv2-ns">
+        <h1 class="f2 lh-title fw7 mb1 mt0 pt3 pt0-ns purple tc tl-ns">
+          Alex Tran
+        </h1>
+        <h2 class="f5 f4-l purple pl3 pr3 pr0-ns pl0-ns pl0-ns lh-copy lh-title-ns code tc tl-ns fw4 fw4-ns">
+          full-time <span class="sans-serif b i">~*designer*~</span><br class="lh-copy">part-time <code class="code dib pl1 pr1 bg-purple lightest-blue mt2-ns">&#60;coder/&#62;</code>
+        </h2>
+        <!-- <div class="tc tl-ns">
+          <a class="link dim f6 f5-ns dib mr4 mr3-ns" href="#" title="About">
+            <img src="https://icon.now.sh/email/22/5E2CA5" alt="email">
+          </a>
+          <a class="link dim f6 f5-ns dib mr4 mr3-ns" href="#" title="About">
+            <img src="https://icon.now.sh/twitter/22/5E2CA5" alt="twitter">
+          </a>
+          <a class="link dim f6 f5-ns dib mr4 mr3-ns" href="#" title="About">
+            <img src="https://icon.now.sh/medium/22/5E2CA5" alt="twitter">
+          </a>
+          <a class="link dim f6 f5-ns dib" href="#" title="About">
+            <img src="https://icon.now.sh/dribbble/22/5E2CA5" alt="dribbble">
+          </a>
+        </div> -->
+      </header>
+      <ul class="list fr-ns w-30-ns mb5-ns purple tr-ns tl pa1 pb0 pa0-ns">
+        <li class="pt5 pb5 pr2 pl2 pa4-ns pt0-ns pr0-ns bb b--purple">
+          <b class="db f3 mb1 lh-copy">about</b>
+          <span class="f5 f6-m db lh-copy tr-ns code dark-gray">
+            Design-centered human based in <span class="underline">San Jose, CA</span>. Working to benefit people's lives through technology. <a href="mailto:awtran16@gmail.com?Subject=Let's%20talk" target="_top" class="purple dim">I'm looking for work!</a>
+          </span>
+        </li>
+        <li class="pt5 pb5 pr2 pl2 pa4-ns pr0-ns bb b--purple">
+          <b class="db f3 mb1 lh-copy">writing</b>
+          <span class="f5 f6-m db lh-copy tr-ns code dark-gray">
+            I write weekly recaps and articles on interesting tidbits in the design world.
+          </span>
+          <div class="db f5 f6-m">
+            <a class="dim purple mr2 dib lh-copy tr-ns code underline mt3 mt2-ns" href="http://oppia.org/" target="_blank">Respecting the designer + developer gap</a>
+            <span class="dib-ns db lh-copy tr-ns code dark-gray">09.08.17</span>
+            <a class="dim purple mr2 dib lh-copy tr-ns code underline mt3 mt2-ns" href="http://oppia.org/" target="_blank">Endorsing Design Twitter</a>
+            <span class="dib-ns db lh-copy tr-ns code dark-gray">07.28.17</span>
+          </div>
+        </li>
+      </ul>
+      <ul class="list fr-ns w-30-ns mb5-ns purple tr-ns tl pa1 pt0 pa0-ns mr5-ns">
+        <li class="pt5 pb5 pr2 pl2 pa4-ns pt0-ns pr0-ns bb b--purple">
+          <b class="db f3 mb1 lh-copy">work</b>
+          <div class="db f5 f6-m mt2">
+            <a class="dim purple mr2 dib lh-copy tr-ns code underline" href="http://oppia.org/" target="_blank">Oppia</a>
+            <span class="dib lh-copy tr-ns code dark-gray">UX Researcher</span>
+          </div>
+          <div class="db f5 f6-m mt2">
+            <a class="dim purple mr2 dib lh-copy tr-ns code underline" href="https://quipler.com/" target="_blank">Quipler</a>
+            <span class="dib lh-copy tr-ns code dark-gray">UX/CM Intern</span>
+          </div>
+        </li>
+        <li class="pt5 pb5 pr2 pl2 pa4-ns pr0-ns bb b--purple">
+          <b class="db f3 mb1 lh-copy">projects</b>
+            <div class="db ">
+              <a class="dim purple mr2 dib lh-copy tr-ns code underline" href="https://itunes.apple.com/us/podcast/up-coming/id1263597415" target="_blank">Up + Coming</a>
+              <span class="dib lh-copy tr-ns code dark-gray">Co-host</span>
+            </div>
+            <div class="db f5 f6-m mt2">
+              <a class="dim purple mr2 dib lh-copy tr-ns code underline" href="#" target="_blank">Quipler</a>
+              <!-- <span class="purple mr2 dib lh-copy tr-ns code">Teammatic</span> -->
+              <span class="dib lh-copy tr-ns code dark-gray">Design lead</span>
+            </div>
+            <div class="db f5 f6-m mt2">
+              <a class="dim purple mr2 dib lh-copy tr-ns code underline" href="#" target="_blank">Fitted</a>
+              <!-- <span class="purple mr2 dib lh-copy tr-ns code">Fitted</span> -->
+              <span class="dib lh-copy tr-ns code dark-gray">Product designer</span>
+            </div>
+            <div class="db f5 f6-m mt2">
+              <a class="dim purple mr2 dib lh-copy tr-ns code underline" href="#" target="_blank">Thinkabit Lab</a>
+              <!-- <span class="purple mr2 dib lh-copy tr-ns code">Thinkabit Lab</span> -->
+              <span class="dib lh-copy tr-ns code dark-gray">UX Researcher</span>
+            </div>
+        </li>
+      </ul>
+      <!-- <header class="fn fr-ns w-20-ns mb6 pv2">
+        <a class="db center mw5 purple link dim"
+           title="Up + Coming Podcast Series on iTunes"
+           href="https://itunes.apple.com/us/podcast/up-coming/id1263597415"
+           target="_blank">
+          <dl class="mt2 f5 lh-copy tc tr-ns">
+            <dt class="clip">Title</dt>
+            <dd class="ml0 code purple f4">Up + Coming</dd>
+            <dt class="clip">Artist</dt>
+            <dd class="ml0 black-70 code">podcast series</dd>
+          </dl>
+        </a>
+        <a class="db center mw5 purple link dim"
+           title="Up + Coming Podcast Series on iTunes"
+           href="https://itunes.apple.com/us/podcast/up-coming/id1263597415"
+           target="_blank">
+          <dl class="mt2 f5 lh-copy tc tr-ns">
+            <dt class="clip">Title</dt>
+            <dd class="ml0 code purple f4">Up + Coming</dd>
+            <dt class="clip">Artist</dt>
+            <dd class="ml0 black-70 code">podcast series</dd>
+          </dl>
+        </a>
+      </header> -->
+    </article>
 
-  <!-- FONT
-  ––––––––––––––––– ––––––––––––––––––––––––––––––––– -->
-  <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
-
-  <!-- CSS
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/skeleton.css">
-  <link rel="stylesheet" href="css/style.css">
-
-  <!-- Favicon
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/png" href="images/favicon.png">
-
-
-</head>
-<body>
-
-  <!-- Primary Page Layout
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <div class="container">
-    <div class="row">
-      <div class="header">
-        <h2><strong>Alex Tran</strong></h2>
-
-        <p>Hey, hi, how's it going? &#x1F647;&#x1F3FB;</p>
-
-        <p>I'm a design-centered human based in San Jose, CA. I work to benefit people's lives through seamless experiences with the products &amp; services they use. I'm passionate about design and am always looking to learn &amp; help others in the process.</p>
-
-        <!-- Emoji Iteration -->
-        <p>Currently, I am working at <a class="underline" href="http://www.cisco.com/" target="_blank">Cisco</a> as a full-time engineer, spare-time designer. I also conduct usability tests for <a class="underline" href="http://oppia.org/" target="_blank">Oppia</a> as one of their UX researchers. On weekends, you can find me co-hosting <a class="underline" href="https://itunes.apple.com/us/podcast/up-coming/id1263597415" target="_blank">Up+Coming</a>, a podcast on design from a junior-level perspective.
-        </p>
-
-        <p><span style="background-color: #FFD193">I'm looking for work! If your team is looking for a designer, please <a style="color: #222; text-decoration: underline" href="mailto:awtran16@gmail.com.com?Subject=Let's%20chat!" target="_top">get in touch &#x1F4E7; </a>.</span></p>
-
-        <p>Catch me on <a class="underline twitter"href="http://twitter.com/wolfinthecity_" target="_blank">Twitter</a> sharing jokes, Overwatch and design news. I write weekly recaps and articles on interesting tidbits in the design world on <a class="underline medium" href="http://medium.com/@alextrantheeman" target="_blank">Medium</a>. Oh, and I occasionally share some of the things I'm doing on <a class="underline dribbble" href="https://dribbble.com/awtran" target="_blank">Dribbble</a>.
-        </p>
-
-        <!-- Link to actual portfolio -->
-        <!-- <p>Like what you see so far? Check out my full portfolio <a class="underline" href="http://awtran.com" target="_blank">here</a>.</p> -->
-
-        <a href="virta.html">Coding Assessment here</a>
-        <br>
-        <br>
+    <footer class="ph3 ph4-ns pb3 pb0-ns dark-gray tc mt4 mt6-ns">
+      <div class="pa3 pa2-ns">
+        <p class="f6 db code lh-solid">made with &#x1F49C; | &#x1f527; with tachyons</p>
       </div>
-    </div>
-  </div>
-
-<!-- End Document
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-</body>
+      <div class="pb1 pb2-ns pt3">
+        <a class="link dib dim mr4" href="mailto:awtran16@gmail.com?Subject=Let's%20talk" target="_top" title="About">
+          <img src="https://icon.now.sh/email/20/5E2CA5" alt="email">
+        </a>
+        <a class="link dib dim mr4" href="https://twitter.com/wolfinthecity_" target="_blank" title="About">
+          <img src="https://icon.now.sh/twitter/20/5E2CA5" alt="twitter">
+        </a>
+        <a class="link dib dim mr4" href="https://medium.com/@alextrantheeman" target="_blank" title="About">
+          <img src="https://icon.now.sh/medium/20/5E2CA5" alt="medium">
+        </a>
+        <a class="link dib dim" href="https://dribbble.com/awtran" target="_blank" title="About">
+          <img src="https://icon.now.sh/dribbble/20/5E2CA5" alt="dribbble">
+        </a>
+      </div>
+    </footer>
+  </body>
 </html>
