--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <title>
-
+      Alex W. Tran
     </title>
-    <meta name="author" content="">
+    <meta name="author" content="Alex Tran">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/css/tachyons.css">
@@ -21,18 +21,18 @@
         <div class="dtc v-mid w-75 tr ttu code">
           <!-- <a class="link dim purple f6 f5-ns dib mr2 mr4-ns" href="#" title="About">Projects</a>
           <a class="link dim purple f6 f5-ns dib mr2" href="#" title="Store">Contact</a> -->
-          <a class="link dim f6 f5-ns dib mr3 mr3-ns" href="#">
-            <img src="https://icon.now.sh/email/22/5E2CA5" alt="email">
-          </a>
-          <a class="link dim f6 f5-ns dib mr3 mr3-ns" href="#">
-            <img src="https://icon.now.sh/twitter/22/5E2CA5" alt="twitter">
-          </a>
-          <a class="link dim f6 f5-ns dib mr3 mr3-ns" href="#">
-            <img src="https://icon.now.sh/medium/22/5E2CA5" alt="medium">
-          </a>
-          <a class="link dim f6 f5-ns dib" href="#">
-            <img src="https://icon.now.sh/dribbble/22/5E2CA5" alt="dribbble">
-          </a>
+          <a class="link dib dim mr4" href="mailto:awtran16@gmail.com?Subject=Let's%20talk" target="_top" title="About">
+          <img src="https://icon.now.sh/email/22/5E2CA5" alt="email">
+        </a>
+        <a class="link dib dim mr4" href="https://twitter.com/wolfinthecity_" target="_blank" title="About">
+          <img src="https://icon.now.sh/twitter/22/5E2CA5" alt="twitter">
+        </a>
+        <a class="link dib dim mr4" href="https://medium.com/@alextrantheeman" target="_blank" title="About">
+          <img src="https://icon.now.sh/medium/22/5E2CA5" alt="medium">
+        </a>
+        <a class="link dib dim" href="https://dribbble.com/awtran" target="_blank" title="About">
+          <img src="https://icon.now.sh/dribbble/22/5E2CA5" alt="dribbble">
+        </a>
         </div>
       </nav>
 
