--- a/index.html
+++ b/index.html
@@ -1,162 +1,177 @@
 <!DOCTYPE html>
-<html lang="en" class="sans-serif bg-lightest-blue">
+<html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-    <title>
-      Alex W. Tran
-    </title>
-    <meta name="author" content="Alex Tran">
-    <meta name="description" content="">
+    <title> </title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/css/tachyons.css">
-    <link rel="stylesheet" href="https://unpkg.com/tachyons@4.8.1/css/tachyons.min.css"/>
+    <link rel="stylesheet" href="https://unpkg.com/tachyons@4.9.0/css/tachyons.min.css"/>
+    <link rel="stylesheet" type="text/css" href="style.css"/>
+    <link href="https://fonts.googleapis.com/css?family=Source+Serif+Pro:400,700|Work+Sans:300,400,600,700,900" rel="stylesheet">
   </head>
   <body>
-    <article class="cf ph3 ph5-ns pv2 bg-lightest-blue">
-      <nav class="dt w-100 border-box pv3 ph1-ns bb purple bw mb4 mb5-l">
-        <a class="dtc v-mid purple link dim w-25" href="#" title="Home">
-          <span class="f3 fw9 code">AT</span>
-        </a>
-        <div class="dtc v-mid w-75 tr ttu code">
-          <!-- <a class="link dim purple f6 f5-ns dib mr2 mr4-ns" href="#" title="About">Projects</a>
-          <a class="link dim purple f6 f5-ns dib mr2" href="#" title="Store">Contact</a> -->
-          <a class="link dib dim mr4" href="mailto:awtran16@gmail.com?Subject=Let's%20talk" target="_top" title="About">
-          <img src="https://icon.now.sh/email/22/5E2CA5" alt="email">
-        </a>
-        <a class="link dib dim mr4" href="https://twitter.com/wolfinthecity_" target="_blank" title="About">
-          <img src="https://icon.now.sh/twitter/22/5E2CA5" alt="twitter">
-        </a>
-        <a class="link dib dim mr4" href="https://medium.com/@alextrantheeman" target="_blank" title="About">
-          <img src="https://icon.now.sh/medium/22/5E2CA5" alt="medium">
-        </a>
-        <a class="link dib dim" href="https://dribbble.com/awtran" target="_blank" title="About">
-          <img src="https://icon.now.sh/dribbble/22/5E2CA5" alt="dribbble">
-        </a>
+    <header class="bg-almost-white fixed w-100 ph3 pv3 pv4-ns ph4-m ph5-l zindex worksans">
+      <nav class="f6">
+        <div class="fl">
+          <a class="link hover-gold black dib mr3 ttu fw6" href="index.html" title="Home">Alex Tran</a>
+        </div>
+        <div class="fr">
+          <a class="link hover-gold black dib mr3" href="about.html" title="About">About</a>
+          <a class="link hover-gold black dib mr3" href="#" title="Contact">Contact</a>
+          <a class="link hover-gold black dib" href="AlexWTran_Resume.pdf" target="_blank" title="Resume">Resume</a>
         </div>
       </nav>
-
-      <header class="fn fl-ns w-30-ns mb3 mb6-ns pv5 pv2-ns">
-        <h1 class="f2 lh-title fw7 mb1 mt0 pt3 pt0-ns purple tc tl-ns">
-          Alex Tran
-        </h1>
-        <h2 class="f5 f4-l purple pl3 pr3 pr0-ns pl0-ns pl0-ns lh-copy lh-title-ns code tc tl-ns fw4 fw4-ns">
-          full-time <span class="sans-serif b i">~*designer*~</span><br class="lh-copy">part-time <code class="code dib pl1 pr1 bg-purple lightest-blue mt2-ns">&#60;coder/&#62;</code>
-        </h2>
-        <!-- <div class="tc tl-ns">
-          <a class="link dim f6 f5-ns dib mr4 mr3-ns" href="#" title="About">
-            <img src="https://icon.now.sh/email/22/5E2CA5" alt="email">
-          </a>
-          <a class="link dim f6 f5-ns dib mr4 mr3-ns" href="#" title="About">
-            <img src="https://icon.now.sh/twitter/22/5E2CA5" alt="twitter">
-          </a>
-          <a class="link dim f6 f5-ns dib mr4 mr3-ns" href="#" title="About">
-            <img src="https://icon.now.sh/medium/22/5E2CA5" alt="twitter">
-          </a>
-          <a class="link dim f6 f5-ns dib" href="#" title="About">
-            <img src="https://icon.now.sh/dribbble/22/5E2CA5" alt="dribbble">
-          </a>
-        </div> -->
-      </header>
-      <ul class="list fr-ns w-30-ns mb5-ns purple tr-ns tl pa1 pb0 pa0-ns">
-        <li class="pt5 pb5 pr2 pl2 pa4-ns pt0-ns pr0-ns bb b--purple">
-          <b class="db f3 mb1 lh-copy">about</b>
-          <span class="f5 f6-m db lh-copy tr-ns code dark-gray">
-            Design-centered human based in <span class="underline">San Jose, CA</span>. Working to benefit people's lives through technology. <a href="mailto:awtran16@gmail.com?Subject=Let's%20talk" target="_top" class="purple dim">I'm looking for work!</a>
-          </span>
-        </li>
-        <li class="pt5 pb5 pr2 pl2 pa4-ns pr0-ns bb b--purple">
-          <b class="db f3 mb1 lh-copy">writing</b>
-          <span class="f5 f6-m db lh-copy tr-ns code dark-gray">
-            I write weekly recaps and articles on interesting tidbits in the design world.
-          </span>
-          <div class="db f5 f6-m">
-            <a class="dim purple mr2 dib lh-copy tr-ns code underline mt3 mt2-ns" href="http://oppia.org/" target="_blank">Respecting the designer + developer gap</a>
-            <span class="dib-ns db lh-copy tr-ns code dark-gray">09.08.17</span>
-            <a class="dim purple mr2 dib lh-copy tr-ns code underline mt3 mt2-ns" href="http://oppia.org/" target="_blank">Endorsing Design Twitter</a>
-            <span class="dib-ns db lh-copy tr-ns code dark-gray">07.28.17</span>
-          </div>
-        </li>
-      </ul>
-      <ul class="list fr-ns w-30-ns mb5-ns purple tr-ns tl pa1 pt0 pa0-ns mr5-ns">
-        <li class="pt5 pb5 pr2 pl2 pa4-ns pt0-ns pr0-ns bb b--purple">
-          <b class="db f3 mb1 lh-copy">work</b>
-          <div class="db f5 f6-m mt2">
-            <a class="dim purple mr2 dib lh-copy tr-ns code underline" href="http://oppia.org/" target="_blank">Oppia</a>
-            <span class="dib lh-copy tr-ns code dark-gray">UX Researcher</span>
-          </div>
-          <div class="db f5 f6-m mt2">
-            <a class="dim purple mr2 dib lh-copy tr-ns code underline" href="https://quipler.com/" target="_blank">Quipler</a>
-            <span class="dib lh-copy tr-ns code dark-gray">UX/CM Intern</span>
-          </div>
-        </li>
-        <li class="pt5 pb5 pr2 pl2 pa4-ns pr0-ns bb b--purple">
-          <b class="db f3 mb1 lh-copy">projects</b>
-            <div class="db ">
-              <a class="dim purple mr2 dib lh-copy tr-ns code underline" href="https://itunes.apple.com/us/podcast/up-coming/id1263597415" target="_blank">Up + Coming</a>
-              <span class="dib lh-copy tr-ns code dark-gray">Co-host</span>
-            </div>
-            <div class="db f5 f6-m mt2">
-              <a class="dim purple mr2 dib lh-copy tr-ns code underline" href="#" target="_blank">Quipler</a>
-              <!-- <span class="purple mr2 dib lh-copy tr-ns code">Teammatic</span> -->
-              <span class="dib lh-copy tr-ns code dark-gray">Design lead</span>
-            </div>
-            <div class="db f5 f6-m mt2">
-              <a class="dim purple mr2 dib lh-copy tr-ns code underline" href="#" target="_blank">Fitted</a>
-              <!-- <span class="purple mr2 dib lh-copy tr-ns code">Fitted</span> -->
-              <span class="dib lh-copy tr-ns code dark-gray">Product designer</span>
-            </div>
-            <div class="db f5 f6-m mt2">
-              <a class="dim purple mr2 dib lh-copy tr-ns code underline" href="#" target="_blank">Thinkabit Lab</a>
-              <!-- <span class="purple mr2 dib lh-copy tr-ns code">Thinkabit Lab</span> -->
-              <span class="dib lh-copy tr-ns code dark-gray">UX Researcher</span>
-            </div>
-        </li>
-      </ul>
-      <!-- <header class="fn fr-ns w-20-ns mb6 pv2">
-        <a class="db center mw5 purple link dim"
-           title="Up + Coming Podcast Series on iTunes"
-           href="https://itunes.apple.com/us/podcast/up-coming/id1263597415"
-           target="_blank">
-          <dl class="mt2 f5 lh-copy tc tr-ns">
-            <dt class="clip">Title</dt>
-            <dd class="ml0 code purple f4">Up + Coming</dd>
-            <dt class="clip">Artist</dt>
-            <dd class="ml0 black-70 code">podcast series</dd>
-          </dl>
-        </a>
-        <a class="db center mw5 purple link dim"
-           title="Up + Coming Podcast Series on iTunes"
-           href="https://itunes.apple.com/us/podcast/up-coming/id1263597415"
-           target="_blank">
-          <dl class="mt2 f5 lh-copy tc tr-ns">
-            <dt class="clip">Title</dt>
-            <dd class="ml0 code purple f4">Up + Coming</dd>
-            <dt class="clip">Artist</dt>
-            <dd class="ml0 black-70 code">podcast series</dd>
-          </dl>
-        </a>
-      </header> -->
-    </article>
-
-    <footer class="ph3 ph4-ns pb3 pb0-ns dark-gray tc mt4 mt6-ns">
-      <div class="pa3 pa2-ns">
-        <p class="f6 db code lh-solid">made with &#x1F49C; | &#x1f527; with tachyons</p>
+    </header>
+    <section class="worksans dt w-100 ph4-ns pv4 pv6-ns ph0-l center">
+      <div class="cover bg-left bg-center-l">
+        <!-- HERO LANDING -->
+        <div class="tc pa4 sourceserif">
+          <h1 class="f2 f1-l fw9 mb0 lh-title">My name is Alex.</h1>
+          <h2 class="fw1 f3 mt3">I am a designer in the Bay Area.</h2>
+        </div>
       </div>
-      <div class="pb1 pb2-ns pt3">
-        <a class="link dib dim mr4" href="mailto:awtran16@gmail.com?Subject=Let's%20talk" target="_top" title="About">
-          <img src="https://icon.now.sh/email/20/5E2CA5" alt="email">
-        </a>
-        <a class="link dib dim mr4" href="https://twitter.com/wolfinthecity_" target="_blank" title="About">
-          <img src="https://icon.now.sh/twitter/20/5E2CA5" alt="twitter">
-        </a>
-        <a class="link dib dim mr4" href="https://medium.com/@alextrantheeman" target="_blank" title="About">
-          <img src="https://icon.now.sh/medium/20/5E2CA5" alt="medium">
-        </a>
-        <a class="link dib dim" href="https://dribbble.com/awtran" target="_blank" title="About">
-          <img src="https://icon.now.sh/dribbble/20/5E2CA5" alt="dribbble">
-        </a>
+    </section>
+
+    <div class="mv1 mv4-ns db">
+      <div class="bt tc db b--moon-gray">
+        <p class="pv2 ph3 bg-white dib shadow b--black-10 br2 sans-serif no-underline fw6 mid-gray f6 ttu worksans" style="transform: translateY(-100%)">View my work</p>
       </div>
+    </div>
+
+    <section class="cf pv2 w-100 mw8 center">
+      <article class="fl w-100 w-50-m w-50-ns pa3 pa2-ns">
+        <a href="oppia.html">
+          <div class="aspect-ratio aspect-ratio--4x3 dim point">
+            <img style="background-image:url(images/Oppia.png);"
+            class="db bg-center cover aspect-ratio--object" />
+          </div>
+        </a>
+        <span class="ph2 ph0-ns pb3 link db">
+          <h3 class="f4 f3-ns mb0 black-90 sourceserif">Oppia</h3>
+          <h3 class="f6 f5-ns fw4 mt2 black-60 worksans">Designing for open-source, interactive online learning </h3>
+        </span>
+      </article>
+
+      <article class="fl w-100 w-50-m w-50-ns pa3 pa2-ns">
+        <a href="#0">
+          <div class="aspect-ratio aspect-ratio--4x3 dim point">
+            <img style="background-image:url(images/Teammatic.png);"
+            class="db bg-center cover aspect-ratio--object" />
+          </div>
+        </a>
+        <span href="#0" class="ph2 ph0-ns pb3 link db">
+          <h3 class="f4 f3-ns mb0 black-90 sourceserif">Teammatic</h3>
+          <h3 class="f6 f5-ns fw4 mt2 black-60 worksans">Constraint-based UI tool for team formation</h3>
+        </span>
+      </article>
+
+      <article class="fl w-100 w-50-m w-50-ns pa3 pa2-ns">
+        <a href="#0">
+          <div class="aspect-ratio aspect-ratio--4x3 dim point">
+            <img style="background-image:url(images/Artboard.png);"
+            class="db bg-center cover aspect-ratio--object" />
+          </div>
+        </a>
+        <span class="ph2 ph0-ns pb3 link db">
+          <h3 class="f4 f3-ns mb0 black-90 sourceserif">Fitted</h3>
+          <h3 class="f6 f5-ns fw4 mt2 black-60 worksans">Mobile app to find right-sized clothing</h3>
+        </span>
+      </article>
+
+      <article class="fl w-100 w-50-m w-50-ns pa3 pa2-ns">
+        <a href="#0">
+          <div class="aspect-ratio aspect-ratio--4x3 dim point">
+            <img style="background-image:url(images/Think.png);"
+            class="db bg-center cover aspect-ratio--object" />
+          </div>
+        </a>
+        <span class="ph2 ph0-ns pb3 link db">
+          <h3 class="f4 f3-ns mb0 black-90 sourceserif">Thinkabit Lab</h3>
+          <h3 class="f6 f5-ns fw4 mt2 black-60 worksans">Design + Qualcomm Thinkabit Lab</h3>
+        </span>
+      </article>
+    </section>
+
+    <div class="mv1 mv4-ns db">
+      <div class="bt tc db b--moon-gray">
+        <p class="pv2 ph3 bg-white dib shadow b--black-10 br2 sans-serif no-underline fw6 mid-gray f6 ttu worksans" style="transform: translateY(-100%)">View my projects</p>
+      </div>
+    </div>
+
+    <section class="cf pv2 w-100 mw8 center">
+      <article class="fl w-100 w-50-m w-50-ns pa3 pa2-ns">
+        <a href="dribbblification.html">
+          <div class="aspect-ratio aspect-ratio--4x3 dim point">
+            <img style="background-image:url(images/dribbble.png);"
+            class="db bg-center cover aspect-ratio--object" />
+          </div>
+        </a>
+        <span class="ph2 ph0-ns pb3 link db">
+          <h3 class="f4 f3-ns mb0 black-90 sourceserif">Dribbblification</h3>
+          <h3 class="f6 f5-ns fw4 mt2 black-60 worksans">Improving the way designers get feedback on their work</h3>
+        </span>
+      </article>
+
+      <article class="fl w-100 w-50-m w-50-ns pa3 pa2-ns">
+        <a href="overwatch.html">
+          <div class="aspect-ratio aspect-ratio--4x3 dim point">
+            <img style="background-image:url(images/overwatch.png);"
+            class="db bg-center cover aspect-ratio--object" />
+          </div>
+        </a>
+        <span class="ph2 ph0-ns pb3 link db">
+          <h3 class="f4 f3-ns mb0 black-90 sourceserif">Overwatch Team Builds</h3>
+          <h3 class="f6 f5-ns fw4 mt2 black-60 worksans">Because no one wants to play with an unbalanced team</h3>
+        </span>
+      </article>
+    </section>
+
+    <section class="cf pv2 w-100 mw8 center">
+      <article class="fl w-100 w-50-m w-50-ns pa3 pa2-ns">
+        <a href="upcoming.html">
+          <div class="aspect-ratio aspect-ratio--4x3 dim point">
+            <img style="background-image:url(images/upncoming.png);"
+            class="db bg-center cover aspect-ratio--object" />
+          </div>
+        </a>
+        <span class="ph2 ph0-ns pb3 link db">
+          <h3 class="f4 f3-ns mb0 black-90 sourceserif">Up + Coming</h3>
+          <h3 class="f6 f5-ns fw4 mt2 black-60 worksans">Podcast series for designers new to the industry</h3>
+        </span>
+      </article>
+
+      <article class="fl w-100 w-50-m w-50-ns pa3 pa2-ns">
+        <a href="illustrations.html">
+          <div class="aspect-ratio aspect-ratio--4x3 dim point">
+            <img style="background-image:url(images/designdev.png);"
+            class="db bg-center cover aspect-ratio--object" />
+          </div>
+        </a>
+        <span class="ph2 ph0-ns pb3 link db">
+          <h3 class="f4 f3-ns mb0 black-90 sourceserif">Illustrations</h3>
+          <h3 class="f6 f5-ns fw4 mt2 black-60 worksans">Putting the pen tool to work</h3>
+        </span>
+      </article>
+    </section>
+
+    <!-- DIVIDER -->
+    <div class="mv1 mv3-ns db w-100 center">
+      <div class="bt tc db b--moon-gray">
+      </div>
+    </div>
+
+    <footer class="pv4 ph3 ph5-ns tc">
+      <a class="link dib dim mr4" href="mailto:awtran16@gmail.com?Subject=Let's%20talk" target="_top" title="About">
+      <img src="https://icon.now.sh/email/22/000000" alt="email">
+      </a>
+      <a class="link dib dim mr4" href="https://twitter.com/wolfinthecity_" target="_blank" title="About">
+        <img src="https://icon.now.sh/twitter/22/000000" alt="Twitter">
+      </a>
+      <a class="link dib dim mr4" href="https://medium.com/@alextrantheeman" target="_blank" title="Medium">
+        <img src="https://icon.now.sh/medium/22/000000" alt="medium">
+      </a>
+      <a class="link dib dim" href="https://dribbble.com/awtran" target="_blank" title="Dribbble">
+        <img src="https://icon.now.sh/dribbble/22/000000" alt="dribbble">
+      </a>
+      <small class="mt4 f6 db tc worksans">Alex Tran | Built with Tachyons</small>
     </footer>
   </body>
 </html>
